# rust-rocket-mysql-diesel

./: .env  Cargo.toml  rust-rocket-mysql-diesel.code-workspace
src/: main.rs
src/constants/: catchers.rs
src/controller/: mod.rs
src/db/: mod.rs  mysql_conn.rs  schema.rs
src/model/: mod.rs  test_model.rs
src/routes/: mod.rs  test_routes.rs
